@@ -2,7 +2,7 @@
     Perl >= 5.10, in non-UTF-8 mode. It should run clean for the 8-bit, 16-bit,
     and 32-bit PCRE libraries. --/
     
-< forbid 8BCDIMWZ< 
+< forbid 8BCDIMOWZ< 
 
 /the quick brown fox/
     the quick brown fox
@@ -5632,5 +5632,23 @@ AbcdCBefgBhiBqz
 
 /^A\o{123}B/
     A\123B
+
+/ ^ a + + b $ /x
+    aaaab
+    
+/ ^ a + #comment
+  + b $ /x
+    aaaab
+    
+/ ^ a + #comment
+  #comment
+  + b $ /x
+    aaaab
+    
+/ ^ (?> a + ) b $ /x
+    aaaab 
+
+/ ^ ( a + ) + + \w $ /x
+    aaaab 
 
 /-- End of testinput1 --/
